@@ -1,3 +1,8 @@
+29 January 2008
++ Added parameter to delete function to prevent deletion of all user
+  information.
+
+
 Version 1.0.0 -- 16 August 2007
 ----------------------------------
 16 August 2007
